# fastapi-streamlit-azure1

./: .dockerignore  .gitignore  README.md  prices.csv  pyproject.toml  trades.csv
.github/workflows/: backend_ci_cd_main.yaml  frontend_ci_cd_main.yaml
backend/: Dockerfile  README.md  run_api.py
backend/database/: portfolio_data.sqlite
backend/src/analytics/: pnl_analytics.py
backend/src/api/: config.py  dependencies.py  main.py  utils.py
backend/src/api/middleware/: __init__.py  auth_handling.py  exception_handling.py  logging.py
backend/src/api/routers/: max_profit.py  pnl.py  prices.py  trades.py
backend/src/data_acess/: repository.py
backend/src/data_acess/db_schema/: trade_data.py
backend/tests/: conftest.py
backend/tests/analytics/: test_maximum_profit.py  test_pnl_analytics.py
backend/tests/api/: test_routers.py
backend/tests/data_access/: test_data_access.py
frontend/: Dockerfile  README.md  main.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/src/: __init__.py
frontend/src/components/: charts.py
frontend/src/pages/: __init__.py  data_management.py  pnl_summary.py
frontend/src/services/: api_client.py
frontend/src/utils/: constants.py
frontend/tests/: __init__.py  pytest.ini  requirements-test.txt
frontend/tests/components/: test_charts_pytest.py
frontend/tests/pages/: __init__.py  test_pnl_summary_pytest.py
frontend/tests/services/: test_api_client_pytest.py
frontend/tests/utils/: __init__.py  test_constants_pytest.py
